--- a/webApp/public/styles.css
+++ b/webApp/public/styles.css
@@ -2,31 +2,28 @@ body {
     background-color: #000000;
     color: white;
     font-family: Arial, sans-serif;
-    margin-top: 10px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    overflow: hidden; /* This prevents scrolling */
 }
 
 .container {
     display: grid;
-    grid-template-columns: 2fr 10fr;
-    gap: 20px;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box; /* Ensures padding is included in height/width calculations */
+    grid-template-columns: 1fr 3fr; /* Adjusted ratio for better scaling */
+    gap: 2%;
+    width: 90vw;
+    height: 90vh;
+    padding: 1%;
+    box-sizing: border-box;
 }
 
 .sidebar {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 5%;
+    height: 100%;
 }
 
 .main-content {
@@ -39,11 +36,11 @@ body {
 .output_display {
     background-color: #1F1F1F;
     width: 100%;
-    height: 85%;
+    height: 80%;
     border: 1px solid #444;
-    margin-bottom: 10px; /* Adds a small margin to the bottom for spacing */
+    margin-bottom: 1%;
     color: white;
-    font-size: 18px;
+    font-size: 1.8vw;
     resize: none;
 }
 
@@ -51,23 +48,21 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px; /* Adjust this height if needed */
+    height: 10%;
 }
 
 .button {
     width: 100%;
-    height: 88px;
-    font-size: 24px;
+    height: 68px;
+    font-size: 1.5vw;
     font-weight: bold;
     color: white;
     border: none;
     cursor: pointer;
-    
 }
 
 .logs {
     background-color: #7129e8;
-    
 }
 
 .rtl {
@@ -75,7 +70,7 @@ body {
 }
 
 .stop {
-    background-color: red;
+    background-color: rgb(193, 27, 27);
 }
 
 .status_box {
@@ -84,30 +79,26 @@ body {
     width: 100%;
     border: 1px solid #444;
     padding: 10px;
-    font-size: 18px;
+    font-size: 1.1vw;
     resize: none;
-    width: 210px;
-    height: 360px;
-
+    width: 20vw;
+    height: 30vh;
 }
 
 .input_textbox {
-    height: 60px;
     background-color: #1F1F1F;
     color: white;
-    width: 100%;
     border: 1px solid #444;
     padding: 10px;
-    font-size: 18px;
+    font-size: 1.1vw;
     resize: none;
-    width: 900px;
+    width: 90%;
     border-radius: 10px;
-
 }
 
 .fwd, .talk, .voice {
     background-color: #7129e8;
-    width: 100px;
-    height: 80px;
-    border-radius: 10px;
+    width: 5vw;
+    height: 13vh;
+    border-radius: 5px;
 }
